# tauri-plugin-android-fs

./: CHANGES.md  Cargo.toml  README.md  build.rs
android/: .gitignore  build.gradle.kts  local.properties
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/java/: AndroidFsPlugin.kt  DirUtils.kt  DocumentFileController.kt  FileController.kt  MediaFileController.kt  RawFileController.kt
android/src/test/java/: ExampleUnitTest.kt
permissions/: default.toml  noop.toml
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: error.rs  lib.rs  models.rs
src/api/: android_fs.rs  mod.rs  private_storage.rs  public_storage.rs
src/impls/: android.rs  mod.rs  other.rs
